2024-02-15 Franz Holzinger  <franz@ttproducts.de>
	* The field sorting is only availabel if it is in the TCA of a table. Otherwise it must not be used.

2024-02-10 Franz Holzinger  <franz@ttproducts.de>
	* The field sorting can be missing in the TCA of a table.

2023-12-28 Franz Holzinger  <franz@ttproducts.de>
	* use rector to improve the PHP code

2023-04-15 Franz Holzinger <franz@ttproducts.de>
    * fix #1: fallback must also execute transformSelect

2023-04-15 Franz Holzinger <franz@ttproducts.de>
    * add support for TYPO3 12.3

2022-09-21 Franz Holzinger <franz@ttproducts.de>
    * bugfix: Do not use the uid of a language table. An uid must always come from the original table.

2022-08-17 Franz Holzinger <franz@ttproducts.de>
    * Breaking no.88143: Version-related database field “t3ver_id” removed
    * Breaking no.87193: Deprecated functionality removed: database field “t3ver_label“ removed
    * Add workspace fields “t3ver_wsid“, “t3ver_state“ and “t3ver_move_id“
    * The fields “sorting“, “sorting_foreign“ must be contained in the TCA. Remove them from noTCAFieldArray. It is not certain that they are present in each table.

2022-06-15 Franz Holzinger <franz@ttproducts.de>
    * support backend when TypoScript values might be unset.

2022-03-08 Franz Holzinger <franz@ttproducts.de>
    * bugfixes for PHP 8

2022-02-09 Franz Holzinger <franz@ttproducts.de>
    * remove method setTableFieldArray
    * bugfixes for PHP 8

2022-01-24 Franz Holzinger <franz@ttproducts.de>
    * works with PHP 7.4 - 8 and TYPO3 10 - 11.5 now

2021-10-28 Franz Holzinger <franz@ttproducts.de>
    * add support for TYPO3 11.5
    * remove support for PHP 5.5
    * remove file ext_autoload.php

2021-01-04 Franz Holzinger <franz@ttproducts.de>
    * add support for TYPO3 10.4

2020-05-26 Franz Holzinger <franz@ttproducts.de>
    * fix issues #4 and #5: Preserve quotes inside of quoted string in method transformWhere.

2020-05-25 Franz Holzinger <franz@ttproducts.de>